src/objects/S3Document__c.object
<CustomObject>
    <fields>
        <fullName>contentType__c</fullName>
        <label>Content Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emailHistory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email History</label>
        <referenceTo>EmailHistory__c</referenceTo>
        <relationshipLabel>S3Documents</relationshipLabel>
        <relationshipName>S3Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>objectKey__c</fullName>
        <label>Object Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>S3Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>S3Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S3Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>